fix layout shift on project page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,7 @@
   --bg-highlight: #007F8B;
 
   --shadow: black;
-// bg-col #33343b
+  // bg-col #33343b
 }
 
 // @media (prefers-color-scheme: light) {
@@ -72,9 +72,13 @@ a {
 figure {
   padding: 5px;
   margin: 0 auto;
-  display: inline-block;
   vertical-align: top;
-  max-width: calc(100% - 10px);
+  width: 100%;
+  display: inline-block;
+
+  &.youtube {
+    width: auto;
+  }
 
   a {
     line-height: 0;
@@ -98,12 +102,6 @@ figure {
   }
 
   img {
-    // display: inline-block;
-    // background: red;
-    // object-fit: contain;
-    // max-width: 100%;
-    // max-height: 100%;
-    // background: red;
     display: inline-block;
     height: auto;
     width: 100%;
